Tradio.Client/src/styles.css
.d-flex {
  display: flex;
}

.w-100 {
  width: 100%;
}

.flex-row {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
}

.flex-column {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
}

.hero-section {
  justify-content: space-around;
  align-items: center;
  display: flex;
  min-height: 100%;
}

.vertical-container {
  display: flex;
  flex-direction: column;
  width: 50%;
  height: 100%;
  justify-content: center;
  margin: 0px auto 0px auto;
}

.form-container {
  display: flex;
  flex-direction: column;
  width: 50%;
  justify-content: space-around;
  margin: auto auto auto auto;
}

html,
body {
  background: #1d1c23;
  padding: 0px;
  margin: 0px;
  height: 100%;
}

html {
  padding: 0px 6rem 0px 6rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: white;
}

:root {
  --gray-color: #aaa9b0;
}

.hero-title {
  font-size: 90px;
  margin: 0px;
}

.hero-text {
  font-size: 30px;
  color: var(--gray-color);
  margin-bottom: 50px;
}

.btn {
  cursor: pointer;
  border-radius: 10px;
  padding: 20px;
}

.btn:disabled {
  opacity: 0.5;
}

.btn-primary {
  background-color: orange;
  color: white;
  font-size: 30px;
  width: 50%;
  margin: 10px auto 10px auto;
}

.btn-form {
  padding: 5px 20px 5px 20px;
}

.btn-secondary {
}

.nav-link {
  all: unset;
  cursor: pointer;
  color: white;
  font-size: 24px;
}

.nav {
  list-style: none;
  display: flex;
  justify-content: space-around;
}

header {
  width: 100%;
}

.home-header {
  position: absolute;
}

.label-text {
  display: none;
}

.form-group {
  margin: 0px auto 0px auto;
}

.form-header {
  text-align: center;
}

.error {
  color: #862627;
  background: #ecc8c5;
  padding: 10px;
  border-radius: 10px;
}

.auth-illustration {
  width: 1000px;
}

input {
  border-radius: 10px;
  height: 30px;
  border-color: transparent;
  margin: 12px;
}

p {
  color: var(--gray-color);
}

.link {
  color: white;
}

.center-text {
  margin: 0px auto 0px auto;
}

.active {
  font-weight: bold;
}

.dropdown {
  color: white;
  border-radius: 10px;
  width: 3rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 10rem;
  position: relative;
}

.filter-panel {
  margin-bottom: 20px;
  display: flex;
  gap: 10px;
}

.select-button {
  background: #3a374d;
  color: white;
  width: 10rem;
  text-align: left;
  font-size: 1rem;
  align-items: center;
  display: flex;
}

.sub-dropdown {
  position: absolute;
  z-index: 1;
  left: 100%;
  /* bottom: 100%; */
  margin: 0px;
  display: flex;
  flex-direction: column;
}

